# crossover-signal-bot

./: .gitignore  README.md  agents.md  pyproject.toml
docs/: config.example.toml
src/: __init__.py  main.py  market_hours.py
src/alerts/: __init__.py  telegram.py
src/backtest/: __init__.py  replay.py
src/config/: settings.py
src/data/: __init__.py  base.py  csv_replay.py  polygon.py
src/grading/: __init__.py  engine.py  strike_bias.py
src/indicators/: __init__.py  calculations.py
src/models/: __init__.py  core.py
src/signals/: __init__.py  evaluator.py
src/storage/: __init__.py  csv_export.py  sqlite_logger.py
tests/: conftest.py  test_alerts.py  test_csv_export.py  test_grading.py  test_indicators.py  test_live_hours.py  test_outcomes.py  test_polygon_bootstrap.py  test_replay.py  test_storage_roundtrip.py  test_strike_bias.py
tests/fixtures/: QQQ_1minute_2026-03-24.csv  sample_intraday.csv
